libs/go-lua/compiler/parse/parser.output

state 0
	$accept: .chunk $end 
	chunk1: .    (4)

	.  reduce 4 (src line 170)

	chunk  goto 1
	chunk1  goto 2

state 1
	$accept:  chunk.$end 

	$end  accept
	.  error


state 2
	chunk:  chunk1.    (1)
	chunk:  chunk1.laststat 
	chunk:  chunk1.laststat ';' 
	chunk1:  chunk1.stat 
	chunk1:  chunk1.';' 

	TBreak  shift 7
	TDo  shift 10
	TFor  shift 14
	TFunction  shift 15
	TIf  shift 13
	TLocal  shift 16
	TReturn  shift 6
	TRepeat  shift 12
	TWhile  shift 11
	TGoto  shift 18
	TInterface  shift 20
	T2Colon  shift 17
	TIdent  shift 19
	'('  shift 24
	';'  shift 5
	.  reduce 1 (src line 150)

	stat  goto 4
	laststat  goto 3
	varlist  goto 8
	var  goto 21
	prefixexp  goto 9
	functioncall  goto 23
	afunctioncall  goto 22

state 3
	chunk:  chunk1 laststat.    (2)
	chunk:  chunk1 laststat.';' 

	';'  shift 25
	.  reduce 2 (src line 156)


state 4
	chunk1:  chunk1 stat.    (5)

	.  reduce 5 (src line 173)


state 5
	chunk1:  chunk1 ';'.    (6)

	.  reduce 6 (src line 176)


state 6
	laststat:  TReturn.    (29)
	laststat:  TReturn.exprlist 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  reduce 29 (src line 308)

	var  goto 42
	exprlist  goto 26
	expr  goto 27
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 7
	laststat:  TBreak.    (31)

	.  reduce 31 (src line 316)


state 8
	stat:  varlist.'=' exprlist 
	varlist:  varlist.',' var 

	'='  shift 46
	','  shift 47
	.  error


9: shift/reduce conflict (shift 52(0), red'n 9(0)) on '('
state 9
	stat:  prefixexp.    (9)
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'.' TIdent 
	var:  prefixexp.'.' TType 
	var:  prefixexp.'.' TInterface 
	var:  prefixexp.'.' TReadonly 
	var:  prefixexp.'.' TAs 
	var:  prefixexp.'.' TAsserts 
	var:  prefixexp.'.' TIs 
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' TIdent args 
	functioncall:  prefixexp.':' TType args 
	functioncall:  prefixexp.':' TInterface args 
	functioncall:  prefixexp.':' TReadonly args 
	functioncall:  prefixexp.':' TAs args 
	functioncall:  prefixexp.':' TAsserts args 
	functioncall:  prefixexp.':' TIs args 

	TString  shift 43
	'{'  shift 44
	'('  shift 52
	':'  shift 51
	'.'  shift 49
	'['  shift 48
	.  reduce 9 (src line 190)

	string  goto 54
	args  goto 50
	tableconstructor  goto 53

state 10
	stat:  TDo.block TEnd 
	chunk1: .    (4)

	.  reduce 4 (src line 170)

	chunk  goto 56
	chunk1  goto 2
	block  goto 55

state 11
	stat:  TWhile.expr TDo block TEnd 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 57
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 12
	stat:  TRepeat.block TUntil expr 
	chunk1: .    (4)

	.  reduce 4 (src line 170)

	chunk  goto 56
	chunk1  goto 2
	block  goto 58

state 13
	stat:  TIf.expr TThen block elseifs TEnd 
	stat:  TIf.expr TThen block elseifs TElse block TEnd 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 59
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 14
	stat:  TFor.TIdent '=' expr ',' expr TDo block TEnd 
	stat:  TFor.TIdent '=' expr ',' expr ',' expr TDo block TEnd 
	stat:  TFor.namelist TIn exprlist TDo block TEnd 

	TIdent  shift 60
	.  error

	namelist  goto 61

state 15
	stat:  TFunction.funcname funcbody 

	TIdent  shift 64
	.  error

	funcname  goto 62
	funcname1  goto 63

state 16
	stat:  TLocal.TFunction TIdent funcbody 
	stat:  TLocal.typednamelist '=' exprlist 
	stat:  TLocal.typednamelist 

	TFunction  shift 65
	TIdent  shift 68
	.  error

	typednamelist  goto 66
	typedname  goto 67

state 17
	stat:  T2Colon.TIdent T2Colon 

	TIdent  shift 69
	.  error


state 18
	stat:  TGoto.TIdent 

	TIdent  shift 70
	.  error


19: shift/reduce conflict (shift 71(0), red'n 44(0)) on TIdent
state 19
	stat:  TIdent.TIdent '=' typeexpr 
	stat:  TIdent.TIdent typeparams '=' typeexpr 
	var:  TIdent.    (44)

	TIdent  shift 71
	.  reduce 44 (src line 369)


state 20
	stat:  TInterface.TIdent interfaceextends interfacebody TEnd 

	TIdent  shift 72
	.  error


state 21
	varlist:  var.    (42)
	prefixexp:  var.    (94)

	'='  reduce 42 (src line 361)
	','  reduce 42 (src line 361)
	.  reduce 94 (src line 585)


state 22
	prefixexp:  afunctioncall.    (95)

	.  reduce 95 (src line 588)


state 23
	prefixexp:  functioncall.    (96)

	.  reduce 96 (src line 591)


state 24
	prefixexp:  '('.expr ')' 
	afunctioncall:  '('.functioncall ')' 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 73
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 74
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 25
	chunk:  chunk1 laststat ';'.    (3)

	.  reduce 3 (src line 162)


state 26
	laststat:  TReturn exprlist.    (30)
	exprlist:  exprlist.',' expr 

	','  shift 75
	.  reduce 30 (src line 312)


state 27
	exprlist:  expr.    (55)
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'~' expr 
	expr:  expr.TShl expr 
	expr:  expr.TShr expr 
	expr:  expr.TIdiv expr 
	expr:  expr.TAs typeexpr 
	expr:  expr.TBang 

	TAnd  shift 77
	TOr  shift 76
	TAs  shift 97
	TEqeq  shift 82
	TNeq  shift 83
	TLte  shift 81
	TGte  shift 80
	T2Comma  shift 84
	TShl  shift 94
	TShr  shift 95
	TIdiv  shift 96
	TBang  shift 98
	'>'  shift 78
	'<'  shift 79
	'|'  shift 92
	'~'  shift 93
	'&'  shift 91
	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'^'  shift 90
	.  reduce 55 (src line 429)


state 28
	expr:  TNil.    (57)

	.  reduce 57 (src line 437)


state 29
	expr:  TFalse.    (58)

	.  reduce 58 (src line 441)


state 30
	expr:  TTrue.    (59)

	.  reduce 59 (src line 445)


state 31
	expr:  TNumber.    (60)

	.  reduce 60 (src line 449)


state 32
	expr:  T3Comma.    (61)

	.  reduce 61 (src line 453)


state 33
	expr:  function.    (62)

	.  reduce 62 (src line 457)


34: shift/reduce conflict (shift 52(0), red'n 63(0)) on '('
state 34
	var:  prefixexp.'[' expr ']' 
	var:  prefixexp.'.' TIdent 
	var:  prefixexp.'.' TType 
	var:  prefixexp.'.' TInterface 
	var:  prefixexp.'.' TReadonly 
	var:  prefixexp.'.' TAs 
	var:  prefixexp.'.' TAsserts 
	var:  prefixexp.'.' TIs 
	expr:  prefixexp.    (63)
	functioncall:  prefixexp.args 
	functioncall:  prefixexp.':' TIdent args 
	functioncall:  prefixexp.':' TType args 
	functioncall:  prefixexp.':' TInterface args 
	functioncall:  prefixexp.':' TReadonly args 
	functioncall:  prefixexp.':' TAs args 
	functioncall:  prefixexp.':' TAsserts args 
	functioncall:  prefixexp.':' TIs args 

	TString  shift 43
	'{'  shift 44
	'('  shift 52
	':'  shift 51
	'.'  shift 49
	'['  shift 48
	.  reduce 63 (src line 460)

	string  goto 54
	args  goto 50
	tableconstructor  goto 53

state 35
	expr:  string.    (64)

	.  reduce 64 (src line 463)


state 36
	expr:  tableconstructor.    (65)

	.  reduce 65 (src line 466)


state 37
	expr:  '-'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 99
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 38
	expr:  TNot.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 100
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 39
	expr:  '#'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 101
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 40
	expr:  '~'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 102
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 41
	function:  TFunction.funcbody 

	'('  shift 104
	'<'  shift 106
	.  error

	funcbody  goto 103
	typeparams  goto 105

state 42
	prefixexp:  var.    (94)

	.  reduce 94 (src line 585)


state 43
	string:  TString.    (93)

	.  reduce 93 (src line 579)


state 44
	tableconstructor:  '{'.'}' 
	tableconstructor:  '{'.fieldlist '}' 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	TType  shift 114
	TInterface  shift 115
	TReadonly  shift 116
	TAs  shift 117
	TAsserts  shift 118
	TIs  shift 119
	TKeyof  shift 120
	TExtends  shift 121
	T3Comma  shift 32
	TIdent  shift 113
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'['  shift 111
	'#'  shift 39
	'}'  shift 107
	.  error

	var  goto 42
	expr  goto 112
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36
	fieldlist  goto 108
	field  goto 109
	fieldname  goto 110

state 45
	var:  TIdent.    (44)

	.  reduce 44 (src line 369)


state 46
	stat:  varlist '='.exprlist 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	exprlist  goto 122
	expr  goto 27
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 47
	varlist:  varlist ','.var 

	TIdent  shift 45
	'('  shift 24
	.  error

	var  goto 123
	prefixexp  goto 124
	functioncall  goto 23
	afunctioncall  goto 22

state 48
	var:  prefixexp '['.expr ']' 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 125
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 49
	var:  prefixexp '.'.TIdent 
	var:  prefixexp '.'.TType 
	var:  prefixexp '.'.TInterface 
	var:  prefixexp '.'.TReadonly 
	var:  prefixexp '.'.TAs 
	var:  prefixexp '.'.TAsserts 
	var:  prefixexp '.'.TIs 

	TType  shift 127
	TInterface  shift 128
	TReadonly  shift 129
	TAs  shift 130
	TAsserts  shift 131
	TIs  shift 132
	TIdent  shift 126
	.  error


state 50
	functioncall:  prefixexp args.    (99)

	.  reduce 99 (src line 609)


state 51
	functioncall:  prefixexp ':'.TIdent args 
	functioncall:  prefixexp ':'.TType args 
	functioncall:  prefixexp ':'.TInterface args 
	functioncall:  prefixexp ':'.TReadonly args 
	functioncall:  prefixexp ':'.TAs args 
	functioncall:  prefixexp ':'.TAsserts args 
	functioncall:  prefixexp ':'.TIs args 

	TType  shift 134
	TInterface  shift 135
	TReadonly  shift 136
	TAs  shift 137
	TAsserts  shift 138
	TIs  shift 139
	TIdent  shift 133
	.  error


state 52
	args:  '('.')' 
	args:  '('.exprlist ')' 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	')'  shift 140
	.  error

	var  goto 42
	exprlist  goto 141
	expr  goto 27
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 53
	args:  tableconstructor.    (109)

	.  reduce 109 (src line 655)


state 54
	args:  string.    (110)

	.  reduce 110 (src line 658)


state 55
	stat:  TDo block.TEnd 

	TEnd  shift 142
	.  error


state 56
	block:  chunk.    (7)

	.  reduce 7 (src line 181)


state 57
	stat:  TWhile expr.TDo block TEnd 
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'~' expr 
	expr:  expr.TShl expr 
	expr:  expr.TShr expr 
	expr:  expr.TIdiv expr 
	expr:  expr.TAs typeexpr 
	expr:  expr.TBang 

	TAnd  shift 77
	TDo  shift 143
	TOr  shift 76
	TAs  shift 97
	TEqeq  shift 82
	TNeq  shift 83
	TLte  shift 81
	TGte  shift 80
	T2Comma  shift 84
	TShl  shift 94
	TShr  shift 95
	TIdiv  shift 96
	TBang  shift 98
	'>'  shift 78
	'<'  shift 79
	'|'  shift 92
	'~'  shift 93
	'&'  shift 91
	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'^'  shift 90
	.  error


state 58
	stat:  TRepeat block.TUntil expr 

	TUntil  shift 144
	.  error


state 59
	stat:  TIf expr.TThen block elseifs TEnd 
	stat:  TIf expr.TThen block elseifs TElse block TEnd 
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'~' expr 
	expr:  expr.TShl expr 
	expr:  expr.TShr expr 
	expr:  expr.TIdiv expr 
	expr:  expr.TAs typeexpr 
	expr:  expr.TBang 

	TAnd  shift 77
	TOr  shift 76
	TThen  shift 145
	TAs  shift 97
	TEqeq  shift 82
	TNeq  shift 83
	TLte  shift 81
	TGte  shift 80
	T2Comma  shift 84
	TShl  shift 94
	TShr  shift 95
	TIdiv  shift 96
	TBang  shift 98
	'>'  shift 78
	'<'  shift 79
	'|'  shift 92
	'~'  shift 93
	'&'  shift 91
	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'^'  shift 90
	.  error


state 60
	stat:  TFor TIdent.'=' expr ',' expr TDo block TEnd 
	stat:  TFor TIdent.'=' expr ',' expr ',' expr TDo block TEnd 
	namelist:  TIdent.    (53)

	'='  shift 146
	.  reduce 53 (src line 421)


state 61
	stat:  TFor namelist.TIn exprlist TDo block TEnd 
	namelist:  namelist.',' TIdent 

	TIn  shift 147
	','  shift 148
	.  error


state 62
	stat:  TFunction funcname.funcbody 

	'('  shift 104
	'<'  shift 106
	.  error

	funcbody  goto 149
	typeparams  goto 105

state 63
	funcname:  funcname1.    (32)
	funcname:  funcname1.':' TIdent 
	funcname:  funcname1.':' TType 
	funcname:  funcname1.':' TInterface 
	funcname:  funcname1.':' TReadonly 
	funcname:  funcname1.':' TAs 
	funcname:  funcname1.':' TAsserts 
	funcname:  funcname1.':' TIs 
	funcname1:  funcname1.'.' TIdent 

	':'  shift 150
	'.'  shift 151
	.  reduce 32 (src line 322)


state 64
	funcname1:  TIdent.    (40)

	.  reduce 40 (src line 348)


state 65
	stat:  TLocal TFunction.TIdent funcbody 

	TIdent  shift 152
	.  error


state 66
	stat:  TLocal typednamelist.'=' exprlist 
	stat:  TLocal typednamelist.    (21)
	typednamelist:  typednamelist.',' typedname 

	'='  shift 153
	','  shift 154
	.  reduce 21 (src line 265)


state 67
	typednamelist:  typedname.    (214)

	.  reduce 214 (src line 1090)


state 68
	typedname:  TIdent.    (216)
	typedname:  TIdent.':' typeexpr 

	':'  shift 155
	.  reduce 216 (src line 1098)


state 69
	stat:  T2Colon TIdent.T2Colon 

	T2Colon  shift 156
	.  error


state 70
	stat:  TGoto TIdent.    (23)

	.  reduce 23 (src line 274)


state 71
	stat:  TIdent TIdent.'=' typeexpr 
	stat:  TIdent TIdent.typeparams '=' typeexpr 

	'<'  shift 106
	'='  shift 157
	.  error

	typeparams  goto 158

state 72
	stat:  TInterface TIdent.interfaceextends interfacebody TEnd 
	interfaceextends: .    (218)

	':'  shift 160
	.  reduce 218 (src line 1106)

	interfaceextends  goto 159

state 73
	expr:  expr.TOr expr 
	expr:  expr.TAnd expr 
	expr:  expr.'>' expr 
	expr:  expr.'<' expr 
	expr:  expr.TGte expr 
	expr:  expr.TLte expr 
	expr:  expr.TEqeq expr 
	expr:  expr.TNeq expr 
	expr:  expr.T2Comma expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'^' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.'~' expr 
	expr:  expr.TShl expr 
	expr:  expr.TShr expr 
	expr:  expr.TIdiv expr 
	expr:  expr.TAs typeexpr 
	expr:  expr.TBang 
	prefixexp:  '(' expr.')' 

	TAnd  shift 77
	TOr  shift 76
	TAs  shift 97
	TEqeq  shift 82
	TNeq  shift 83
	TLte  shift 81
	TGte  shift 80
	T2Comma  shift 84
	TShl  shift 94
	TShr  shift 95
	TIdiv  shift 96
	TBang  shift 98
	'>'  shift 78
	'<'  shift 79
	'|'  shift 92
	'~'  shift 93
	'&'  shift 91
	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'^'  shift 90
	')'  shift 161
	.  error


74: shift/reduce conflict (shift 162(0), red'n 96(0)) on ')'
state 74
	prefixexp:  functioncall.    (96)
	afunctioncall:  '(' functioncall.')' 

	')'  shift 162
	.  reduce 96 (src line 591)


state 75
	exprlist:  exprlist ','.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 163
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 76
	expr:  expr TOr.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 164
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 77
	expr:  expr TAnd.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 165
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 78
	expr:  expr '>'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 166
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 79
	expr:  expr '<'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 167
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 80
	expr:  expr TGte.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 168
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 81
	expr:  expr TLte.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 169
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 82
	expr:  expr TEqeq.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 170
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 83
	expr:  expr TNeq.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 171
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 84
	expr:  expr T2Comma.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 172
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 85
	expr:  expr '+'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 173
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 86
	expr:  expr '-'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 174
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 87
	expr:  expr '*'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 175
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 88
	expr:  expr '/'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error

	var  goto 42
	expr  goto 176
	string  goto 35
	prefixexp  goto 34
	functioncall  goto 23
	afunctioncall  goto 22
	function  goto 33
	tableconstructor  goto 36

state 89
	expr:  expr '%'.expr 

	TFalse  shift 29
	TFunction  shift 41
	TNil  shift 28
	TNot  shift 38
	TTrue  shift 30
	T3Comma  shift 32
	TIdent  shift 45
	TNumber  shift 31
	TString  shift 43
	'{'  shift 44
	'('  shift 24
	'~'  shift 40
	'-'  shift 37
	'#'  shift 39
	.  error
